# SOE_Gabriel_Julia_2020_2

./: README.md  car_counter.py  magica.py  test.py
Código-fonte/: TestSheets-a46ab399d19e.json  car_counter.py
Código-fonte/C++/: CMakeLists.txt  Tracker.cpp  carCounter.cpp  compile_n_run.sh  test_c.cpp
